--- a/pallets/zkproof/Cargo.toml
+++ b/pallets/zkproof/Cargo.toml
@@ -31,7 +31,7 @@ scale-info = { version = "2.10.0", default-features = false, features = [
 
 ark-ec = { version = "0.4.0", default-features = false }
 ark-ff = { version = "0.4.0", default-features = false }
-ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [ "r1cs", "snark" ] }
+ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "snark"] }
 ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
 ark-serialize = { version = "0.4.0", features = ["derive"], default-features = false }
 ark-std = { version = "0.4.0", default-features = false }
@@ -39,7 +39,7 @@ ark-groth16 = { version = "0.4.0", features = ["r1cs"], default-features = false
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.117", default-features = false }
 getrandom = { version = "0.2.15", features = ["js"], default-features = false }
-
+sha2 = { version = "0.10.8", default-features = false }
 # frame deps
 frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false, optional = true }
 frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
@@ -63,7 +63,7 @@ std = [
     "scale-info/std",
     "sp-core/std",
     "sp-io/std",
-    "sp-runtime/std",
+    "sp-runtime/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
